--- a/build.gradle
+++ b/build.gradle
@@ -16,18 +16,30 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+
+	//compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.11.1'
+
+	compile 'io.springfox:springfox-swagger2:2.9.2'
+	compile 'io.springfox:springfox-swagger-ui:2.9.2'
+
+	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
 	runtimeOnly 'com.h2database:h2'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+
 	compileOnly 'org.projectlombok:lombok:1.18.12'
+
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.12'
+
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
 
-	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 }
 
 test {
