--- a/build.gradle
+++ b/build.gradle
@@ -10,19 +10,23 @@ sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
+	maven {
+		url "https://plugins.gradle.org/m2/"
+	}
 }
 
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+	implementation 'org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE'
 
 	//compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.11.1'
 
-	compile 'io.springfox:springfox-swagger2:2.9.2'
-	compile 'io.springfox:springfox-swagger-ui:2.9.2'
-
-	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
