Using data base

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 //	implementation 'org.springframework.data:spring-data-rest-hal-browser'
 	implementation 'org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE'
 
