--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,21 @@ management:
     web:
       exposure:
         include: "*"
+#deprected
+#spring:
+#  security:
+#    user:
+#      name: david
+#      password: qwe123
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+  data:
+    jpa:
+      repositories:
+        bootstrap-mode: default
+  jpa:
+    show-sql: true
+  h2:
+    console:
+      enabled: true
